Further Landing Styling

--- a/client/TODO.txt
+++ b/client/TODO.txt
@@ -1,2 +1,3 @@
 - Consider moving App Context Provider directly down to the Taskboard level.
-- ADD PRETTIER
+- Consider fonts
+- I've fucked with the font size, this could impact the styling of the base app.
